@@ -109,7 +109,9 @@ u8glib ChangeLog
   * New C++ interface for ST7920 
 2013-03-24	v1.11	  Oliver Kraus <olikraus@gmail.com>
   * Added touch panel examples
-
+2013-xx-xx	v1.12
+  * Fixed missing "Arduino.h" in u8g_delay.c
+  
   
   
   
